# mem_dlfunc

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: test.dex
app/src/main/cpp/: CMakeLists.txt  dlfunc.cpp  dlfunc_bridge.cpp  executable_mem.c  fake_dlfcn.c  fake_dlfcn.h  hook_stub.s  log.h  memory_scanner.c  memory_scanner.h  phook.c  phook.h  shellcode_arm64.c  shellcode_arm64.h
app/src/main/java/com/park/dlfunc/: AssetUtils.java  MainActivity.java  NativeBridge.java  StubArtMethodClass.java  TargetClass.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
